--- a/public/index.html
+++ b/public/index.html
@@ -48,5 +48,8 @@
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/090d060e5f.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
